@@ -4,7 +4,7 @@
 #ifndef __oe_base_NavDR_H__
 #define __oe_base_NavDR_H__
 
-#include "openeaagles/base/support.h"
+#include "openeaagles/base/platform/support.h"
 
 namespace oe {
 namespace base {
