@@ -2,7 +2,7 @@
 #ifndef __oe_base_Object_H__
 #define __oe_base_Object_H__
 
-#include "openeaagles/base/support.h"
+#include "openeaagles/base/platform/support.h"
 #include "openeaagles/base/macros.h"
 #include "openeaagles/base/SlotTable.h"
 #include "openeaagles/base/safe_ptr.h"
