@@ -1,8 +1,8 @@
 
-#ifndef __oe_base_lfi_H__
-#define __oe_base_lfi_H__
+#ifndef __oe_base_util_lfi_H__
+#define __oe_base_util_lfi_H__
 
-#include "openeaagles/base/support.h"
+#include "openeaagles/base/platform/support.h"
 
 namespace oe {
 namespace base {
