@@ -193,8 +193,8 @@ namespace simulation {
 //       'month' and 'year' to override the computer system's time and/or
 //       date with your own simulated time and/or date.
 //
-//    4) See "openeaagles/base/support.h" for additional get time and time
-//       conversion functions.
+//    4) See "openeaagles/base/platform/support.h" for additional time related
+//       functions.
 //
 //
 // Environments:
