@@ -82,7 +82,7 @@
 #include <cstdlib>
 #include <cstring>
 #include "openeaagles/base/Parser.h"
-#include "openeaagles/base/support.h"
+#include "openeaagles/base/platform/support.h"
 #include "openeaagles/base/Object.h"
 #include "openeaagles/base/String.h"
 #include "openeaagles/base/Identifier.h"
