@@ -1,0 +1,13 @@
+#
+include ../../makedefs
+
+LIB = $(OPENEAAGLES_LIB_DIR)/liboebase.a
+
+OBJS =  \
+	$(LIB)(support.o)
+
+all: ${OBJS}
+
+clean:
+	-rm -f *.o
+
